[workspace]
resolver = "2"
members = ["logic", "framework"]

[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hot-lib-reloader = "0.6.4"
logic = { path = "logic" }
framework = { path = "framework" }

[dev-dependencies]
